...
                                    <constraint firstAttribute="height" constant="60" id="w4w-2Z-G14"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QMp-EH-3di">
                                <rect key="frame" x="16" y="640" width="343" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="3h3-JH-PWl"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="AccessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oXv-PQ-v2e">
                                <rect key="frame" x="8" y="11" width="24" height="24"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button"/>
...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cui-gR-ubr">
                                                    <rect key="frame" x="317" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton" label="Like Button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="42" id="IJ7-cL-0KD"/>
                                                        <constraint firstAttribute="width" constant="42" id="Xro-mQ-Q4i"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeNoActive"/>
...
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Sharing"/>
                                <connections>
                                    <action selector="didTapShareButton:" destination="3IZ-GI-R9D" eventType="touchUpInside" id="xSk-hE-rBO"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCj-9X-B39" userLabel="BackButton">
                                <rect key="frame" x="15" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="Bgf-qH-ElP"/>
                                    <constraint firstAttribute="height" constant="48" id="MdU-0H-Ldb"/>
                                </constraints>
...
